# fsm-97-data

./: .gitignore  Makefile  README.md  generate_www.py  poetry.toml  pyproject.toml
csv/: clubs.csv  countries.csv  facility_data.csv  leagues.csv  player_position_ratings.csv  player_skills.csv  players.csv  positions.csv  stadium_types.csv  strings.csv  teams.csv
docs/: analytics.md  data-extraction.md  game_files.md  save_format.md  videos.md
frames/: README.md
frames/credits/: README.md
frames/cupl/: README.md
frames/cupw/: README.md
frames/fsmintro/: README.md
frames/lwin/: README.md
frames/prom/: README.md
frames/rel/: README.md
frames/sacked/: README.md
fsm97/: __init__.py  constants.py  content.py  credits.py  data.py  extract.py  generate_www.py  parser.py  scribe.py
fsm97/analytics/: __init__.py  cli.py  enrich.py
fsm97/logs/: __init__.py  cli.py
html/: game_data_summary.html
logs/: .gitignore
templates/: about.pt  analytics.pt  club.pt  clubs.pt  credits.pt  events.pt  home.pt  layout.pt  league.pt  leagues.pt  managers.pt  nation.pt  nationalities.pt  nationality.pt  nations.pt  players.pt  position.pt  positions.pt  sitemap.pt  stadium.pt  stadiums.pt  stats_age_groups.pt  stats_best_of.pt  stats_index.pt  stats_nationalities.pt  stats_player_managers.pt  stats_skill_leaders.pt  stats_squads.pt  stats_stadiums.pt  stats_top_players.pt  trivia.pt  trivia_clubs.pt  trivia_players.pt  trivia_stadiums.pt  videos.pt
www/: .htaccess  index.html  manifest.json  sitemap.xml  style.css
www/about/: index.html
www/clubs/: index.html
(+2116 files in other folders)
