[project]
name = "fsm97"
version = "0.1.0"
description = "FIFA Soccer Manager 97 data extraction and website generation"
authors = [
    {name = "Ben Nuttall", email = "ben@bennuttall.com"}
]
requires-python = ">=3.10"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"

[tool.poetry.dependencies]
chameleon = "^4.6.0"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
lines_after_imports = 2

[project.scripts]
fsm-extract = "fsm97.extract:main"
fsm-scribe  = "fsm97.scribe:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
